src/objects/Frequency_of_Payments__c.object
<CustomObject>
    <description>Used by the National Accounts group to record payments on GSA or TCPN Opportunities</description>
    <fields>
        <fullName>Admin_Fee_Reported_Date__c</fullName>
        <description>The date the admin fee was reported</description>
        <inlineHelpText>The date the admin fee was reported.</inlineHelpText>
        <label>Admin Fee Reported Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Amount paid</description>
        <inlineHelpText>Amount of payment that was paid</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <description>How often will the payment be made</description>
        <inlineHelpText>How often will the payments be made?</inlineHelpText>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One Time</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Bi-Annual</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <description>Used by National Accounts</description>
        <inlineHelpText>Invoice Date for the Frequency of the Payments</inlineHelpText>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <description>Invoice #</description>
        <inlineHelpText>Invoice #</inlineHelpText>
        <label>Invoice #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Frequency of Payments</relationshipLabel>
        <relationshipName>Frequency_of_Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Frequency of Payments</label>
    <nameField>
        <displayFormat>F-{000000}</displayFormat>
        <label>Frequency of Payments Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Frequency of Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>